Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40344

Loopback test failed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.2
    • 5.3.1
    • Serial Port
    • None
    • Windows 7 (x86)

    Description

      I tried a loopback test (connecting RX and TX) with the blockingmaster example.
      I used a FTDI USB-RS232 converter. With HTerm i have no problems.
      I think it is some kind of buffer problem?

      Attachments

        1. Win7_QTCreator.png
          136 kB
          drakesoft
        2. Win7_QTCreator2.png
          136 kB
          drakesoft
        3. Win7_QTCreator3.png
          136 kB
          drakesoft
        For Gerrit Dashboard: QTBUG-40344
        # Subject Branch Project Status CR V

        Activity

          People

            kuzulis Denis Shienkov
            drakesoft drakesoft
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes